# stock_dashboard

./: .dockerignore  .gitignore  README.md  bronze_layer.py  bronze_layer_delta.py  bronze_layer_orchestrator.py  data_collectors.py  data_storage.py  data_validators.py  dockerfile  edition.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.sh  silver_layer_delta.py  simple_test.py  test.md  test_finance_reader.py  test_gcs_connection.py  test_silver_layer.py  test_silver_simple.py  testing.md
.cursor/rules/: development-guidelines.mdc  project-overview.mdc  technology-stack.mdc
.github/: dockerfiles.yaml  jobs.yaml
.github/workflows/: dockerfiles.yaml  jobs.yaml
cloud-run-jobs/: README.md  bronze-backfill-job.yaml  bronze-job.yaml  deploy.sh  silver-backfill-job.yaml  silver-job.yaml
docs/: BACKFILL_GUIDE.md
scripts/: run_backfill.py
src/app/: __init__.py  main.py
src/app/backfill/: backfill_orchestrator.py
src/app/bronze/: __init__.py  bronze_layer.py  bronze_layer_delta.py  bronze_layer_orchestrator.py  bronze_layer_point_in_time.py
src/app/membership/: sp500_membership_tracker.py
src/app/silver/: __init__.py  silver_layer_delta.py
src/utils/: __init__.py  data_collectors.py  data_storage.py  data_validators.py
tests/: __init__.py  conftest.py  test_bronze_layer.py  test_bronze_layer_delta.py  test_integration.py  test_silver_layer_delta.py  test_stock_dashboard.py  test_utils.py
